Done with traditional HTML-CSS.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<header class="header">
+			<div class="logo">
+				<a href="https://itsm-ace.ca/images/logo.svg" target="_blank">
+				<img src="https://itsm-ace.ca/images/logo.svg" alt="Pixell River Logo">
+				</a>
+			</div>
+			<div class="header-text">
+				<h1>Pixell River Employee Directory</h1>
+				<p>Welcome to Pixell River Financial</p>
+			</div>
+		</header>
+		<main id="app">
 
+		</main>
+		<footer>
+			<p id="copyright"></p>
+		</footer>
+		<script src="script.js"></script>
 	</body>
 </html>
